# GL_Application_Dmytro_Borak

./: CMakeLists.txt  README.md  application.cpp  multithreaded_file_search.cpp  multithreaded_file_search.h
